feat: fix user interface and fix websocket
