# ytb-video-sharing-app-be/docs/swagger.json
@@ -310,6 +310,13 @@
                 "summary": "Share new video",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "WebSocket connection ID",
+                        "name": "conn_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
                         "description": "Share video payload",
                         "name": "request",
                         "in": "body",
@@ -380,7 +387,18 @@
                 }
             }
         },
-        "dto.CreateAccountResponse": {
+        "dto.CreateAccountResponseDocs": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/dto.CreateAccountResponseWithOTP"
+                },
+                "metadata": {
+                    "$ref": "#/definitions/dto.Metadata"
+                }
+            }
+        },
+        "dto.CreateAccountResponseWithOTP": {
             "type": "object",
             "properties": {
                 "access_token": {
@@ -398,19 +416,11 @@
                 "id": {
                     "type": "integer"
                 },
+                "otp": {
+                    "type": "string"
+                },
                 "refresh_token": {
                     "type": "string"
-                }
-            }
-        },
-        "dto.CreateAccountResponseDocs": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/dto.CreateAccountResponse"
-                },
-                "metadata": {
-                    "$ref": "#/definitions/dto.Metadata"
                 }
             }
         },
@@ -452,7 +462,18 @@
                 }
             }
         },
-        "dto.LoginResponse": {
+        "dto.LoginResponseDocs": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/dto.LoginResponseWithOTP"
+                },
+                "metadata": {
+                    "$ref": "#/definitions/dto.Metadata"
+                }
+            }
+        },
+        "dto.LoginResponseWithOTP": {
             "type": "object",
             "properties": {
                 "access_token": {
@@ -470,19 +491,11 @@
                 "id": {
                     "type": "integer"
                 },
+                "otp": {
+                    "type": "string"
+                },
                 "refresh_token": {
                     "type": "string"
-                }
-            }
-        },
-        "dto.LoginResponseDocs": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/dto.LoginResponse"
-                },
-                "metadata": {
-                    "$ref": "#/definitions/dto.Metadata"
                 }
             }
         },
@@ -576,10 +589,8 @@
         "dto.ShareVideoRequest": {
             "type": "object",
             "required": [
-                "downvote",
                 "thumbnail",
                 "title",
-                "upvote",
                 "video_url"
             ],
             "properties": {
@@ -606,9 +617,6 @@
         "dto.ShareVideoResponse": {
             "type": "object",
             "properties": {
-                "account_id": {
-                    "type": "integer"
-                },
                 "description": {
                     "type": "string"
                 },
@@ -646,9 +654,6 @@
         "dto.VideoResponse": {
             "type": "object",
             "properties": {
-                "account_id": {
-                    "type": "integer"
-                },
                 "description": {
                     "type": "string"
                 },
@@ -657,6 +662,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "shared_by": {
+                    "type": "string"
                 },
                 "thumbnail": {
                     "type": "string"
