# ytb-video-sharing-app-be/internal/dto/account.go
@@ -13,6 +13,11 @@ type CreateAccountResponse struct {
 	AccountResponse
 }
 
+type CreateAccountResponseWithOTP struct {
+	CreateAccountResponse
+	OTP string `json:"otp"`
+}
+
 type LoginRequest struct {
 	Email    string `json:"email" binding:"required,email"`
 	Password string `json:"password" binding:"required,min=6"`
@@ -22,6 +27,11 @@ type LoginResponse struct {
 	AccessToken  string `json:"access_token"`
 	RefreshToken string `json:"refresh_token"`
 	AccountResponse
+}
+
+type LoginResponseWithOTP struct {
+	OTP string `json:"otp"`
+	LoginResponse
 }
 
 type RefreshTokenResponse struct {
